package com.techforb.challenge.user;

/**
 * Represents a document type.
 *
 * @author Leonel Zeballos
 */
@SuppressWarnings("unused")
public enum DocumentType {
    DNI, CEDULA, PASAPORTE
}
