package com.techforb.challenge.user;

/**
 * Represents a user role.
 *
 * @author Leonel Zeballos
 */
@SuppressWarnings("unused")
public enum Role {
    ADMIN, USER
}
